argo-apps/rhoai-observability/otel-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  annotations:
    argocd.argoproj.io/sync-wave: "-10"
  labels:
    argocd.argoproj.io/managed-by: openshift-gitops
  name: opentelemetry-operator
